--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=delivery_Order_Service
-
+spring.data.mongodb.host=order-db
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=order_service_db
 
